# TermCast

./: .gitignore  README.md  config.json  example_listen_time.json  example_sources.json  example_sources.txt  main.py  pyproject.toml  termcast.py
